<resources>
    <string name="app_name">Simple Guru Retrofit</string>
    <string name="text_nim">A12.2020.06495</string>
    <string name="text_full_name">Kukuh Setya Arumansyah</string>
    <string name="text_major">Sistem Informasi - S1</string>
    <string name="label_nim">NIM</string>
    <string name="label_full_name">Nama</string>
    <string name="label_major">Jurusan</string>
    <string name="titik_dua">:</string>
    <string name="title_khs">KARTU HASIL STUDI</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_entry_data_khs">Entry Data KHS</string>
    <string name="entry_khs">Entry KHS</string>
    <string name="text_no">No</string>
    <string name="text_code">Kode</string>
    <string name="text_name">Nama Matkul</string>
    <string name="text_sks">SKS</string>
    <string name="text_number_grade">N.Angka</string>
    <string name="text_letter_grade">N.Huruf</string>
    <string name="text_predicate">Predikat</string>
    <string name="label_ipk">IPK</string>
    <string name="label_total_matkul">Jumlah Mata Kuliah</string>
    <string name="label_total_sks">Total SKS</string>
    <string name="number_zero">0</string>
    <string name="default_major">Sistem Informasi</string>
    <string name="default_degree">S1</string>
    <string name="default_nim">A12.2020.</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="label_nim_or_username">NIM or Username</string>
    <string name="label_degree">Sarjana</string>
    <string name="label_email">Email</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_code_matkul">Kode</string>
    <string name="label_name_matkul">Matakuliah</string>
    <string name="label_sks">SKS</string>
    <string name="label_letter_grade">N. Huruf</string>
    <string name="label_grade">N. Angka</string>
    <string name="label_predicate">Predikat</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="delete">Hapus</string>
    <string name="generate">Generate</string>
    <string-array name="data_code_matkul">
        <item>ISP201</item>
        <item>KFT110</item>
        <item>KFT203</item>
        <item>KOM101</item>
        <item>KOM108</item>
        <item>KUU101</item>
        <item>KUU102</item>
        <item>KUU106</item>
        <item>PSI109</item>
    </string-array>
    <string-array name="data_name_matkul">
        <item>Pengantar Ilmu Politik</item>
        <item>Pengantar Ilmu Komputer</item>
        <item>Statistika I</item>
        <item>Pengantar Ilmu Komunikasi</item>
        <item>Pengantar Sosiologi</item>
        <item>Pancasila</item>
        <item>Agama</item>
        <item>Bahasa Inggris</item>
        <item>Psikologi Umum</item>
    </string-array>
    <string name="titik_tengah">·</string>
    <string name="medicine_name">Nama</string>
    <string name="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</string>
    <string name="default_img_url">https://lyrihkaesa.github.io/img/medicine/default-obatkaesa.png</string>
    <string name="entry_medicine">Tambah Obat</string>
    <string name="entry_data_medicine">Input Data Obat</string>
    <string name="update_data_medicine">Update Data Obat</string>
    <string name="author">Kukuh Setya Arumansyah</string>
    <string name="email">kukuhsetyaa@gmail.com</string>
    <string name="desc_author">Mahasiswa jurusan Sistem Informasi di Universitas Dian Nuswantoro. Yang memiliki hobbi bermain permainan Toram Online, yang berkencimbung di dunia Software Engginer khususnya Back-End dan dunia Jaringan Komputer RT/RW Net seperti Mikrotik.</string>
    <string name="about">Tentang</string>
    <string name="share">Bagikan</string>
    <string name="label_code">Kode</string>
    <string name="hint_kode">Isi dengan kode barang!</string>
    <string name="label_nama">Nama</string>
    <string name="hint_nama">Isi dengan nama barang!</string>
    <string name="label_satuan">Satuan</string>
    <string name="hint_satuan">Isi dengan Satuan barang!</string>
    <string name="label_price">Harga</string>
    <string name="hint_harga">Isi dengan harga barang!</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_batal">Batal</string>
    <string name="update_page">Update</string>
    <string name="img_url">Image Url</string>
    <string name="update">Simpan Edit</string>
    <string name="text_hapus">Hapus</string>
    <string name="entry_product">Tambah Barang</string>
    <string name="label_amount">Jumlah</string>
    <string name="label_expired_date">Tanggal Kadaluarsa</string>
    <string name="label_packaging">Kemasan</string>
    <string name="label_type">Tipe</string>
    <string name="tv_date">dd/MM/yyyy</string>
    <string name="label_pick_date">pick date</string>
    <string name="format_date">%d-%02d-%d</string>
    <string name="entry_teacher">Tambah Guru</string>
    <string name="label_position">Jabatan</string>
    <string name="label_nip">NIP</string>
    <string name="label_status">Status</string>
    <string name="label_gaji">Gaji</string>
    <string-array name="data_name">
        <item>Sumagesic 4 Tablet</item>
        <item>Decolgen 4 Tablet</item>
        <item>Vitamin C IPI 50 mg 45 Tablet</item>
        <item>Betadine Mouthwash &amp; Gargle 190 ml</item>
        <item>Panadol Extra 10 Kaplet</item>
        <item>Postinor 2 Tablet</item>
        <item>Dermatix Ultra Gel 15 g</item>
        <item>Acetylcysteine 200 mg 10 Kapsul</item>
        <item>Dapyrin 500 mg 10 Tablet</item>
        <item>Acitral Suspensi 120 ml</item>
        <item>Orezinc Sirup 60 ml</item>
        <item>Fluimucil 200 mg 10 Kapsul</item>
    </string-array>
    <string-array name="data_type">
        <item>tablet</item>
        <item>tablet</item>
        <item>tablet</item>
        <item>cair</item>
        <item>kaplet</item>
        <item>tablet</item>
        <item>oles</item>
        <item>kapsul</item>
        <item>tablet</item>
        <item>sirup</item>
        <item>sirup</item>
        <item>kapsul</item>
    </string-array>
</resources>