<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activity.khs.KhsList">

    <TextView
        android:id="@+id/title_khs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_red"
        android:gravity="center_horizontal"
        android:text="@string/title_khs"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/table_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_khs"
        android:layout_marginVertical="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/titik_dua" />

            <TextView
                android:id="@+id/tv_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nim" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_full_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/titik_dua" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_full_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_major" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/titik_dua" />

            <TextView
                android:id="@+id/tv_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_major" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/table_identity"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="@drawable/table_header_cell_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_no" />

        <TextView
            android:id="@+id/tv_code"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="top"
            android:layout_weight="4"
            android:background="@drawable/table_header_cell_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_code"  />

        <TextView
            android:id="@+id/tv_name"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="top"
            android:layout_weight="7"
            android:background="@drawable/table_header_cell_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_name" />

        <TextView
            android:id="@+id/tv_sks"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="top"
            android:layout_weight="3"
            android:background="@drawable/table_header_cell_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_sks" />

        <TextView
            android:id="@+id/tv_grade"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="top"
            android:layout_weight="3"
            android:background="@drawable/table_header_cell_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_number_grade" />

        <TextView
            android:id="@+id/tv_letter_grade"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="top"
            android:layout_weight="3"
            android:background="@drawable/table_header_cell_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_letter_grade" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_khs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/table_header"
        android:layout_marginTop="2dp" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_border_red">

        <TableLayout
            android:id="@+id/table_ipk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ipk" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/titik_dua" />

                <TextView
                    android:id="@+id/tv_ipk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_zero" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_sks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/titik_dua" />

                <TextView
                    android:id="@+id/tv_total_sks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_zero" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_matkul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/titik_dua" />

                <TextView
                    android:id="@+id/tv_total_matkul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_zero" />
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/btn_entry_khs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_primary"
            android:src="@drawable/round_add_24"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:contentDescription="@string/entry_khs" />
    </RelativeLayout>

</RelativeLayout>